Notebook folder created, Path management within notebooks upgraded

--- a/Notebooks/1.Extract_and_load.ipynb
+++ b/Notebooks/1.Extract_and_load.ipynb
@@ -22,21 +22,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b2657cbd-2be9-43d9-ac0a-897c68780d49",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'functions' from '/home/juancml/Personal-Profesional/henry/pi_mlops/functions.py'>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import gzip\n",
     "import json\n",
@@ -44,13 +33,18 @@
     "import pandas as pd\n",
     "import importlib\n",
     "\n",
-    "import functions.ETL as fts \n",
-    "importlib.reload(fts)"
+    "# Parent folder MUST be added.\n",
+    "# Otherwise it will not find the funcions module and raw\n",
+    "# data files neither.\n",
+    "import sys\n",
+    "sys.path.append('../')\n",
+    "\n",
+    "import functions.ETL as fts "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "d5f11421",
    "metadata": {},
    "outputs": [
@@ -65,7 +59,7 @@
     }
    ],
    "source": [
-    "data = fts.load_json_gz('./raw_data/steam_games.json.gz', mode='rt', encoding='UTF-8')\n",
+    "data = fts.load_json_gz('../raw_data/steam_games.json.gz', mode='rt', encoding='UTF-8')\n",
     "print(len(data))"
    ]
   },
@@ -79,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "c0d1fc97",
    "metadata": {},
    "outputs": [
@@ -247,7 +241,7 @@
        "4   NaN          NaN  NaN       NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +902,7 @@
     "# Keeping ids, genres, specs, prices, developer, app_names, tags\n",
     "columns = ['item_id', 'developer', 'app_name', 'genres', 'tags', 'specs', 'release_year', 'price']\n",
     "fts.gzip_json_file(\n",
-    "    './data/games.json.gz',\n",
+    "    '../data/games.json.gz',\n",
     "    df=df_games,\n",
     "    subset=columns  \n",
     ")"
@@ -942,7 +936,7 @@
     }
    ],
    "source": [
-    "revs = fts.load_json_gz('./raw_data/user_reviews.json.gz', mode='rt', encoding='UTF-8')"
+    "revs = fts.load_json_gz('../raw_data/user_reviews.json.gz', mode='rt', encoding='UTF-8')"
    ]
   },
   {
@@ -1318,7 +1312,7 @@
    "source": [
     "# Saving it into a file - 58430 reviews total\n",
     "columns = ['user_id', 'item_id', 'recommend', 'review']\n",
-    "fts.gzip_json_file('./data/user_reviews_c.json.gz',\n",
+    "fts.gzip_json_file('../data/user_reviews_c.json.gz',\n",
     "               df=revs,\n",
     "               subset=columns)"
    ]
@@ -1353,7 +1347,7 @@
     }
    ],
    "source": [
-    "df_items = fts.load_json_gz('./raw_data/users_items.json.gz',\n",
+    "df_items = fts.load_json_gz('../raw_data/users_items.json.gz',\n",
     "                     mode='rt', encoding='UTF-8')"
    ]
   },
@@ -1952,7 +1946,7 @@
     "#     df=items,\n",
     "# )\n",
     "\n",
-    "items.to_csv('./data/items.csv.gz', compression='gzip', index=False)"
+    "items.to_csv('../data/items.csv.gz', compression='gzip', index=False)"
    ]
   }
  ],
