--- a/Notebooks/2.Sentiment_analysis.ipynb
+++ b/Notebooks/2.Sentiment_analysis.ipynb
@@ -10,7 +10,12 @@
     "import numpy as np\n",
     "import nltk\n",
     "\n",
-    "# nltk.download('vader_lexicon')"
+    "# nltk.download('vader_lexicon')\n",
+    "\n",
+    "# Parent folder MUST be added.\n",
+    "# Otherwise data folder will not be found.\n",
+    "import sys\n",
+    "sys.path.append('../')"
    ]
   },
   {
@@ -26,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_revs = pd.read_json('./data/user_reviews_c.json.gz', compression='gzip', lines=True)\n",
+    "df_revs = pd.read_json('../data/user_reviews_c.json.gz', compression='gzip', lines=True)\n",
     "print(df_revs.info())\n",
     "df_revs.head()"
    ]
@@ -297,11 +302,11 @@
     "# )\n",
     "\n",
     "# Saving csv format\n",
-    "df_revs[columns].to_csv('./data/reviews.csv.gz', compression='gzip', index=False)\n",
+    "df_revs[columns].to_csv('../data/reviews.csv.gz', compression='gzip', index=False)\n",
     "\n",
     "# Deleting previous reviews file\n",
     "import os\n",
-    "os.remove('./data/user_reviews_c.json.gz')"
+    "os.remove('../data/user_reviews_c.json.gz')"
    ]
   }
  ],
