--- a/Notebooks/4.EDA_and_Preprocessing.ipynb
+++ b/Notebooks/4.EDA_and_Preprocessing.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,12 @@
     "import pandas as pd \n",
     "import matplotlib.pyplot as plt \n",
     "import seaborn as sns\n",
+    "\n",
+    "# Parent folder MUST be added.\n",
+    "# Otherwise it will not find the funcions module and data folder\n",
+    "# can't be accessed.\n",
+    "import sys\n",
+    "sys.path.append('../')\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -62,7 +68,7 @@
     }
    ],
    "source": [
-    "df = pd.read_json('./data/games.json.gz', compression='gzip', lines=True)\n",
+    "df = pd.read_json('../data/games.json.gz', compression='gzip', lines=True)\n",
     "df.info()"
    ]
   },
