Final version, API running locally

--- a/Notebooks/5.RecSys_building_test.ipynb
+++ b/Notebooks/5.RecSys_building_test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -313,370 +313,132 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>item_id</th>\n",
-       "      <th>developer</th>\n",
        "      <th>app_name</th>\n",
        "      <th>genres</th>\n",
-       "      <th>tags</th>\n",
        "      <th>specs</th>\n",
        "      <th>release_year</th>\n",
        "      <th>price</th>\n",
-       "      <th>_Released after 2010</th>\n",
-       "      <th>_Released before 2000</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Includes level editor</th>\n",
-       "      <th>Mods</th>\n",
-       "      <th>Mods (require HL2)</th>\n",
-       "      <th>Game demo</th>\n",
-       "      <th>Includes Source SDK</th>\n",
-       "      <th>SteamVR Collectibles</th>\n",
-       "      <th>Keyboard / Mouse</th>\n",
-       "      <th>Gamepad</th>\n",
-       "      <th>Windows Mixed Reality</th>\n",
-       "      <th>Mods (require HL1)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>32025</th>\n",
-       "      <td>360</td>\n",
-       "      <td>Valve</td>\n",
        "      <td>Half-Life Deathmatch: Source</td>\n",
        "      <td>[Action]</td>\n",
-       "      <td>[Action, FPS, Multiplayer, Sci-fi, Shooter, Fi...</td>\n",
        "      <td>[Multi-player, Valve Anti-Cheat enabled]</td>\n",
        "      <td>2006</td>\n",
        "      <td>9.99</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32115</th>\n",
-       "      <td>80</td>\n",
-       "      <td>Valve</td>\n",
        "      <td>Counter-Strike: Condition Zero</td>\n",
        "      <td>[Action]</td>\n",
-       "      <td>[Action, FPS, Shooter, Multiplayer, Singleplay...</td>\n",
        "      <td>[Single-player, Multi-player, Valve Anti-Cheat...</td>\n",
        "      <td>2004</td>\n",
        "      <td>9.99</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32021</th>\n",
-       "      <td>1200</td>\n",
-       "      <td>Tripwire Interactive</td>\n",
        "      <td>Red Orchestra: Ostfront 41-45</td>\n",
        "      <td>[Action]</td>\n",
-       "      <td>[Action, World War II, FPS, Realistic, Multipl...</td>\n",
        "      <td>[Multi-player, Steam Achievements, Valve Anti-...</td>\n",
        "      <td>2006</td>\n",
        "      <td>9.99</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32050</th>\n",
-       "      <td>2100</td>\n",
-       "      <td>Arkane Studios</td>\n",
        "      <td>Dark Messiah of Might &amp; Magic</td>\n",
        "      <td>[Action, RPG]</td>\n",
-       "      <td>[RPG, Action, First-Person, Fantasy, Adventure...</td>\n",
        "      <td>[Single-player, Multi-player, Valve Anti-Cheat...</td>\n",
        "      <td>2006</td>\n",
        "      <td>9.99</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32112</th>\n",
-       "      <td>30</td>\n",
-       "      <td>Valve</td>\n",
        "      <td>Day of Defeat</td>\n",
        "      <td>[Action]</td>\n",
-       "      <td>[FPS, World War II, Multiplayer, Action, Shoot...</td>\n",
        "      <td>[Multi-player, Valve Anti-Cheat enabled]</td>\n",
        "      <td>2003</td>\n",
        "      <td>4.99</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32106</th>\n",
-       "      <td>40</td>\n",
-       "      <td>Valve</td>\n",
        "      <td>Deathmatch Classic</td>\n",
        "      <td>[Action]</td>\n",
-       "      <td>[Action, FPS, Multiplayer, Classic, Shooter, F...</td>\n",
        "      <td>[Multi-player, Valve Anti-Cheat enabled]</td>\n",
        "      <td>2001</td>\n",
        "      <td>4.99</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32103</th>\n",
-       "      <td>60</td>\n",
-       "      <td>Valve</td>\n",
        "      <td>Ricochet</td>\n",
        "      <td>[Action]</td>\n",
-       "      <td>[Action, FPS, Multiplayer, First-Person, Cyber...</td>\n",
        "      <td>[Multi-player, Valve Anti-Cheat enabled]</td>\n",
        "      <td>2000</td>\n",
        "      <td>4.99</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31904</th>\n",
-       "      <td>2640</td>\n",
-       "      <td>Gray Matter Studios</td>\n",
        "      <td>Call of Duty: United Offensive</td>\n",
        "      <td>[Action]</td>\n",
-       "      <td>[Action, World War II, FPS, Shooter, Multiplay...</td>\n",
        "      <td>[Single-player, Multi-player]</td>\n",
        "      <td>2004</td>\n",
        "      <td>19.99</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31903</th>\n",
-       "      <td>2630</td>\n",
-       "      <td>Infinity Ward,Aspyr (Mac)</td>\n",
        "      <td>Call of Duty® 2</td>\n",
        "      <td>[Action]</td>\n",
-       "      <td>[Action, FPS, World War II, Multiplayer, Singl...</td>\n",
        "      <td>[Single-player, Multi-player]</td>\n",
        "      <td>2005</td>\n",
        "      <td>19.99</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31900</th>\n",
-       "      <td>2620</td>\n",
-       "      <td>Infinity Ward</td>\n",
        "      <td>Call of Duty®</td>\n",
        "      <td>[Action]</td>\n",
-       "      <td>[FPS, Action, World War II, Classic, Shooter, ...</td>\n",
        "      <td>[Single-player, Multi-player]</td>\n",
        "      <td>2003</td>\n",
        "      <td>19.99</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10 rows × 77 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       item_id                  developer                        app_name  \\\n",
-       "32025      360                      Valve    Half-Life Deathmatch: Source   \n",
-       "32115       80                      Valve  Counter-Strike: Condition Zero   \n",
-       "32021     1200       Tripwire Interactive   Red Orchestra: Ostfront 41-45   \n",
-       "32050     2100             Arkane Studios   Dark Messiah of Might & Magic   \n",
-       "32112       30                      Valve                   Day of Defeat   \n",
-       "32106       40                      Valve              Deathmatch Classic   \n",
-       "32103       60                      Valve                        Ricochet   \n",
-       "31904     2640        Gray Matter Studios  Call of Duty: United Offensive   \n",
-       "31903     2630  Infinity Ward,Aspyr (Mac)                 Call of Duty® 2   \n",
-       "31900     2620              Infinity Ward                   Call of Duty®   \n",
+       "                             app_name         genres  \\\n",
+       "32025    Half-Life Deathmatch: Source       [Action]   \n",
+       "32115  Counter-Strike: Condition Zero       [Action]   \n",
+       "32021   Red Orchestra: Ostfront 41-45       [Action]   \n",
+       "32050   Dark Messiah of Might & Magic  [Action, RPG]   \n",
+       "32112                   Day of Defeat       [Action]   \n",
+       "32106              Deathmatch Classic       [Action]   \n",
+       "32103                        Ricochet       [Action]   \n",
+       "31904  Call of Duty: United Offensive       [Action]   \n",
+       "31903                 Call of Duty® 2       [Action]   \n",
+       "31900                   Call of Duty®       [Action]   \n",
        "\n",
-       "              genres                                               tags  \\\n",
-       "32025       [Action]  [Action, FPS, Multiplayer, Sci-fi, Shooter, Fi...   \n",
-       "32115       [Action]  [Action, FPS, Shooter, Multiplayer, Singleplay...   \n",
-       "32021       [Action]  [Action, World War II, FPS, Realistic, Multipl...   \n",
-       "32050  [Action, RPG]  [RPG, Action, First-Person, Fantasy, Adventure...   \n",
-       "32112       [Action]  [FPS, World War II, Multiplayer, Action, Shoot...   \n",
-       "32106       [Action]  [Action, FPS, Multiplayer, Classic, Shooter, F...   \n",
-       "32103       [Action]  [Action, FPS, Multiplayer, First-Person, Cyber...   \n",
-       "31904       [Action]  [Action, World War II, FPS, Shooter, Multiplay...   \n",
-       "31903       [Action]  [Action, FPS, World War II, Multiplayer, Singl...   \n",
-       "31900       [Action]  [FPS, Action, World War II, Classic, Shooter, ...   \n",
-       "\n",
-       "                                                   specs  release_year  price  \\\n",
-       "32025           [Multi-player, Valve Anti-Cheat enabled]          2006   9.99   \n",
-       "32115  [Single-player, Multi-player, Valve Anti-Cheat...          2004   9.99   \n",
-       "32021  [Multi-player, Steam Achievements, Valve Anti-...          2006   9.99   \n",
-       "32050  [Single-player, Multi-player, Valve Anti-Cheat...          2006   9.99   \n",
-       "32112           [Multi-player, Valve Anti-Cheat enabled]          2003   4.99   \n",
-       "32106           [Multi-player, Valve Anti-Cheat enabled]          2001   4.99   \n",
-       "32103           [Multi-player, Valve Anti-Cheat enabled]          2000   4.99   \n",
-       "31904                      [Single-player, Multi-player]          2004  19.99   \n",
-       "31903                      [Single-player, Multi-player]          2005  19.99   \n",
-       "31900                      [Single-player, Multi-player]          2003  19.99   \n",
-       "\n",
-       "       _Released after 2010  _Released before 2000  ...  \\\n",
-       "32025                     0                      0  ...   \n",
-       "32115                     0                      0  ...   \n",
-       "32021                     0                      0  ...   \n",
-       "32050                     0                      0  ...   \n",
-       "32112                     0                      0  ...   \n",
-       "32106                     0                      0  ...   \n",
-       "32103                     0                      0  ...   \n",
-       "31904                     0                      0  ...   \n",
-       "31903                     0                      0  ...   \n",
-       "31900                     0                      0  ...   \n",
-       "\n",
-       "       Includes level editor  Mods  Mods (require HL2)  Game demo  \\\n",
-       "32025                      0     0                   0          0   \n",
-       "32115                      0     0                   0          0   \n",
-       "32021                      0     0                   0          0   \n",
-       "32050                      0     0                   0          0   \n",
-       "32112                      0     0                   0          0   \n",
-       "32106                      0     0                   0          0   \n",
-       "32103                      0     0                   0          0   \n",
-       "31904                      0     0                   0          0   \n",
-       "31903                      0     0                   0          0   \n",
-       "31900                      0     0                   0          0   \n",
-       "\n",
-       "       Includes Source SDK  SteamVR Collectibles  Keyboard / Mouse  Gamepad  \\\n",
-       "32025                    0                     0                 0        0   \n",
-       "32115                    0                     0                 0        0   \n",
-       "32021                    0                     0                 0        0   \n",
-       "32050                    0                     0                 0        0   \n",
-       "32112                    0                     0                 0        0   \n",
-       "32106                    0                     0                 0        0   \n",
-       "32103                    0                     0                 0        0   \n",
-       "31904                    0                     0                 0        0   \n",
-       "31903                    0                     0                 0        0   \n",
-       "31900                    0                     0                 0        0   \n",
-       "\n",
-       "       Windows Mixed Reality  Mods (require HL1)  \n",
-       "32025                      0                   0  \n",
-       "32115                      0                   0  \n",
-       "32021                      0                   0  \n",
-       "32050                      0                   0  \n",
-       "32112                      0                   0  \n",
-       "32106                      0                   0  \n",
-       "32103                      0                   0  \n",
-       "31904                      0                   0  \n",
-       "31903                      0                   0  \n",
-       "31900                      0                   0  \n",
-       "\n",
-       "[10 rows x 77 columns]"
+       "                                                   specs  release_year  price  \n",
+       "32025           [Multi-player, Valve Anti-Cheat enabled]          2006   9.99  \n",
+       "32115  [Single-player, Multi-player, Valve Anti-Cheat...          2004   9.99  \n",
+       "32021  [Multi-player, Steam Achievements, Valve Anti-...          2006   9.99  \n",
+       "32050  [Single-player, Multi-player, Valve Anti-Cheat...          2006   9.99  \n",
+       "32112           [Multi-player, Valve Anti-Cheat enabled]          2003   4.99  \n",
+       "32106           [Multi-player, Valve Anti-Cheat enabled]          2001   4.99  \n",
+       "32103           [Multi-player, Valve Anti-Cheat enabled]          2000   4.99  \n",
+       "31904                      [Single-player, Multi-player]          2004  19.99  \n",
+       "31903                      [Single-player, Multi-player]          2005  19.99  \n",
+       "31900                      [Single-player, Multi-player]          2003  19.99  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_games.loc[indexes]"
+    "items = df_games.loc[indexes, ['app_name', 'genres', 'specs', 'release_year', 'price']]\n",
+    "items"
    ]
   }
  ],
