Size of working DataFrames reduced due to memory limitations. Fixed typos in README

--- a/Notebooks/4.EDA_and_Preprocessing.ipynb
+++ b/Notebooks/4.EDA_and_Preprocessing.ipynb
@@ -2119,7 +2119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Final version of the dataset should look like this."
+    "Final version of the dataset where similirities will be computed should look like this."
    ]
   }
  ],
